# k8s-cluster-bundle

./: BUILD  CODE_OF_CONDUCT.md  Gopkg.toml  PROJECT  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl  update_vendor.sh
cmd/bundlectl/: BUILD.bazel  main.go  version.bzl
cmd/bundlectl/integration-tests/: version.sh
cmd/bundlectl/integration_tests/: BUILD  version.sh
cmd/bundler/: BUILD.bazel  main.go
examples/: BUILD.bazel  bazel_init_test.go  bundle-example.yaml  component-data-files.yaml  component-set.yaml  examples_test.go
examples/cluster/: BUILD.bazel  bundle-builder-example.yaml  bundle-example.yaml  component-set.yaml
examples/cluster/datablob/: data-blob-component.yaml
examples/cluster/etcd/: etcd-component.yaml
examples/cluster/kubedns/: kubedns-component.yaml  service-account.yaml
examples/cluster/kubeproxy/: kube-proxy-component.yaml  kubeproxy.yaml
examples/cluster/kubernetes/: kube-controller-manager.yaml  kube-scheduler.yaml  kubernetes-component.yaml
examples/cluster/nodes/: nodes-component.yaml  ubuntu-cluster-node.yaml  ubuntu-master-node.yaml
examples/cluster/options/: options-component.yaml  options-crd.yaml
examples/component/: BUILD.bazel  README.md  bazel_init_test.go  component_test.go  etcd-component-builder.yaml  etcd-component.yaml  etcd-server.yaml  options.yaml  patches.yaml  test-suite.yaml
examples/datablob/: data-blob-component.yaml  some-data.txt
examples/etcd/: etcd-component.yaml
examples/jsonnet/: BUILD.bazel  bazel_init_test.go  builder.yaml  jsonnet_test.go  multi-pods.builder.yaml  multi-pods.jsonnet  pod-with-imports.builder.yaml  pod-with-imports.jsonnet  pod.builder.yaml  pod.jsonnet  test-suite.yaml
examples/kubedns/: kubedns-component.yaml
examples/kubeproxy/: kube-proxy-component.yaml
examples/kubernetes/: kube-apiserver.yaml  kubernetes-component.yaml
examples/nodes/: nodes-component.yaml
examples/options/: options-component.yaml
examples/patchbuild/: README.md  build-options.yaml  etcd-component-builder.yaml  etcd-component.yaml  etcd-image-patch.yaml  runtime-options.yaml
examples/patchbuilder/: BUILD.bazel  README.md  bazel_init_test.go  build-options.yaml  builder.yaml  component-test.yaml  component_test.go  deploy-options-1.yaml  deploy-options-2.yaml  deployment-patch-builder.yaml  helloweb-deployment.yaml  helloweb-service-clusterip.yaml  kube-scheduler.yaml  patch-template-builder.yaml  service-patch.yaml  test-suite.yaml
examples/templatebuilder/: BUILD.bazel  README.md  bazel_init_test.go  builder.yaml  template-builder.yaml
examples/templatefiles/: BUILD.bazel  README.md  bazel_init_test.go  builder.yaml  component_test.go  etcd-template.yaml  test-suite.yaml
pkg/clientset/versioned/: BUILD.bazel  clientset.go  doc.go
pkg/commands/: BUILD.bazel  app_writer.go  bundle_reader_writer.go  bundle_reader_writer_test.go  component_writer.go  doc.go  export.go  export_test.go  inline.go  inline_test.go  patch.go  patch_test.go  root.go  validate.go  validate_test.go
pkg/commands/cmdlib/: BUILD.bazel  bundle_reader_writer.go  bundle_reader_writer_test.go  bundleio.go  bundleio_test.go  bundlewrapper.go  cmdio.go  cmdlib.go  component_writer.go  doc.go  global_options.go
pkg/commands/cmdrunner/: BUILD.bazel  execute_cmd.go
pkg/commands/cmdtest/: BUILD.bazel  fake_cmd_io.go  fake_exiter.go  fake_stdio.go
pkg/commands/export/: BUILD.bazel  add_commands.go  component_export.go  export.go  export_test.go  get_command.go  object_export.go
pkg/commands/filter/: BUILD.bazel  add_commands.go  doc.go  filter.go  get_command.go
pkg/commands/find/: BUILD.bazel  add_commands.go  get_command.go  images.go
pkg/commands/generate/: BUILD.bazel  get_command.go
pkg/commands/inline/: BUILD.bazel  add_commands.go  inline.go  inline_test.go  register.go
pkg/commands/modify/: BUILD.bazel  add_commands.go  images.go
pkg/commands/patch/: BUILD.bazel  add_commands.go  get_command.go  patch.go  patch_test.go  register.go
pkg/commands/testing/: BUILD.bazel  doc.go  fake_app_writer.go  fake_bundle_reader_writer.go  fake_file_reader.go
pkg/commands/validate/: BUILD.bazel  add_commands.go  get_command.go  register.go  validate.go  validate_test.go
pkg/commands/version/: BUILD.bazel  add_commands.go  get_command.go  version_test.go
pkg/converter/: BUILD.bazel  bazel_init_test.go  bundle_reader_writer.go  clone.go  converter.go  converter_integration_test.go  converter_test.go  decoder.go  decoder_test.go  demuxer.go  doc.go  encoder.go  example_test.go  exporter.go  exporter_test.go  k8sbundle.go  kube.go  kube_test.go  muxer.go  muxer_test.go  name.go  name_test.go  object_ref.go  object_ref_test.go  unstructured.go
pkg/core/: BUILD.bazel  component_data.go  core.go  doc.go  file_reader_writer.go
pkg/files/: BUILD.bazel  doc.go  file_reader_writer.go  file_reader_writer_test.go  url_scheme.go
pkg/filter/: BUILD.bazel  doc.go  example_selectObjects_test.go  example_select_test.go  filter.go  filter_test.go
pkg/find/: BUILD.bazel  doc.go  finder.go  finder_test.go  images.go  images_test.go
pkg/generate/: BUILD.bazel  generate.go
pkg/internal/: BUILD.bazel  templater.go
pkg/options/: BUILD.bazel  common.go  options.go
pkg/options/gotmpl/: BUILD.bazel  go_template_applier.go  go_template_applier_benchmark_test.go  go_template_applier_test.go
pkg/testutil/: BUILD.bazel  errors.go  fake_reader_writer.go  testutil.go
pkg/transformer/: BUILD.bazel  config_map_maker.go  config_map_maker_test.go  doc.go  export.go  export_test.go  images.go  images_test.go  inline.go  inline_test.go
pkg/validate/: BUILD.bazel  doc.go  validate_component.go  validate_component_test.go  validate_name.go  validate_name_test.go  validate_url.go  validate_url_test.go
pkg/validation/: BUILD.bazel  custom_resource.go  doc.go  errors.go  validate_bundle.go  validate_bundle_test.go  validate_component.go  validate_component_test.go  validate_name.go  validate_name_test.go  validate_url.go  validate_url_test.go
pkg/wrapper/: BUILD.bazel  bundlewrapper.go  bundlewrapper_test.go
(+203 files in other folders)
