load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "testdata",
    srcs = [
        "//examples/cluster:testdata",
        "//examples/component:testdata",
        "//examples/jsonnet:testdata",
        "//examples/patchbuilder:testdata",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bazel_init_test.go",
        "examples_test.go",
    ],
    deps = [
        "//pkg/testutil:go_default_library",
        "//pkg/testutil/componentsuite:go_default_library",
    ],
)
