load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load(":version.bzl", "VERSION")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/cmd/bundlectl",
    visibility = ["//visibility:private"],
    deps = ["//pkg/commands:go_default_library"],
)

go_binary(
    name = "bundlectl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {"main.BUNDLECTL_VERSION": VERSION},  # Links the version value into the binary
)
