load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/cmd/bundlectl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/commands:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_binary(
    name = "bundlectl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
