load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/cmd/bundler",
    visibility = ["//visibility:private"],
    deps = ["//pkg/commands:go_default_library"],
)

go_binary(
    name = "bundler",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
