load("@io_bazel_rules_go//go:def.bzl", "go_test")

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "testdata",
    srcs = [
        "builder.yaml",
        "multi-pods.builder.yaml",
        "multi-pods.jsonnet",
        "pod.builder.yaml",
        "pod.jsonnet",
        "pod-with-imports.builder.yaml",
        "pod-with-imports.jsonnet",
    ],
    visibility = [
        "//pkg/options/jsonnet:__subpackages__",
        "//examples:__pkg__",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bazel_init_test.go"],
    deps = ["//pkg/testutil:go_default_library"],
)
