load("@io_bazel_rules_go//go:def.bzl", "go_test")

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "testdata",
    srcs = glob(["*.yaml", "*.jsonnet"]),
    visibility = [
        "//pkg/options/jsonnet:__subpackages__",
        "//examples:__pkg__",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bazel_init_test.go",
        "jsonnet_test.go",
    ],
    data = [":testdata"],
    deps = [
        "//pkg/testutil:go_default_library",
        "//pkg/testutil/componentsuite:go_default_library",
    ],
)
