load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "root.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/commands/build:go_default_library",
        "//pkg/commands/cmdlib:go_default_library",
        "//pkg/commands/export:go_default_library",
        "//pkg/commands/filter:go_default_library",
        "//pkg/commands/find:go_default_library",
        "//pkg/commands/patch:go_default_library",
        "//pkg/commands/validate:go_default_library",
        "//pkg/commands/version:go_default_library",
        "//pkg/files:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
