load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["templater.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/internal",
    visibility = ["//visibility:public"],
    deps = [
      "@com_github_google_safetext//yamltemplate",
      "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
    ],
)
