load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "options.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/options",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
    ],
)
