load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testutil.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/testutil",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bundle_testdata",
    srcs = glob(["testdata/**/*.yaml"]),
    visibility = ["//visibility:public"],
)
