load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake_reader_writer.go",
        "testutil.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/files:go_default_library",
    ],
)

filegroup(
    name = "bundle_testdata",
    srcs = glob(["testdata/**/*.yaml"]),
    visibility = ["//visibility:public"],
)
