load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "errors.go",
        "fake_reader_writer.go",
        "testutil.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/testutil",
    visibility = ["//visibility:public"],
    deps = ["//pkg/apis/bundle/v1alpha1:go_default_library"],
)
