load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "images.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/transformer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/core:go_default_library",
        "//pkg/find:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["images_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/converter:go_default_library",
        "//pkg/find:go_default_library",
    ],
)
