load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "errors.go",
        "validate_component.go",
        "validate_name.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/validation",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/core:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "validate_component_test.go",
        "validate_name_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//pkg/converter:go_default_library"],
)
