load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bundlewrapper.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/wrapper",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/converter:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bundlewrapper_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/testutil:go_default_library"],
)
