load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clientset.go",
        "doc.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/clientset/versioned",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clientset/versioned/typed/bundle/v1alpha1:go_default_library",
        "@io_k8s_client_go//discovery:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//util/flowcontrol:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)
