load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bundleio.go",
        "bundlewrapper.go",
        "cmdlib.go",
        "doc.go",
        "global_options.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/cmdlib",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/build:go_default_library",
        "//pkg/converter:go_default_library",
        "//pkg/files:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bundleio_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/converter:go_default_library",
        "//pkg/files:go_default_library",
    ],
)
