load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake_cmd_io.go",
        "fake_exiter.go",
        "fake_stdio.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/cmdtest",
    visibility = ["//visibility:public"],
    deps = ["//pkg/testutil:go_default_library"],
)
