load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "add_command.go",
        "export.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/export",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/commands/cmdlib:go_default_library",
        "//pkg/converter:go_default_library",
        "//pkg/core:go_default_library",
        "//pkg/transformer:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["export_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/transformer:go_default_library",
    ],
)
