load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "export.go",
        "get_command.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/export",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/commands/cmdlib:go_default_library",
        "//pkg/converter:go_default_library",
        "//pkg/files:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)
