load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_commands.go",
        "doc.go",
        "filter.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/filter",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/commands/cmdlib:go_default_library",
        "//pkg/files:go_default_library",
        "//pkg/filter:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
