load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_commands.go",
        "images.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/find",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/commands/cmdlib:go_default_library",
        "//pkg/files:go_default_library",
        "//pkg/find:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
