load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["get_command.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/generate",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/generate:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
