load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "add_commands.go",
        "inline.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/inline",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/commands/cmdlib:go_default_library",
        "//pkg/converter:go_default_library",
        "//pkg/files:go_default_library",
        "//pkg/transformer:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["inline_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/commands/cmdlib:go_default_library",
        "//pkg/converter:go_default_library",
        "//pkg/testutil:go_default_library",
    ],
)
