load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "get_command.go",
        "patch.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/patch",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bundle/v1alpha1:go_default_library",
        "//pkg/commands/cmdlib:go_default_library",
        "//pkg/files:go_default_library",
        "//pkg/filter:go_default_library",
        "//pkg/options/patchtmpl:go_default_library",
        "//pkg/wrapper:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)
