load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "fake_app_writer.go",
        "fake_bundle_reader_writer.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/commands/testing",
    visibility = ["//visibility:public"],
    deps = ["//pkg/apis/bundle/v1alpha1:go_default_library"],
)
